--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,91 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
   font-size: 10px;
+}
+
+.preview.baku {
+  background-image: url(/images/baku.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: block;
+  float:left;
+}
+h1
+{
+  display:block;
+  margin:20px;
+  padding: 5px;
+}
+
+.preview.london {
+  background-image: url(/images/london.png);
+  background-repeat:no-repeat;
+  background-size:100%;
+  display: block;
+  float:left;
+}
+
+.preview.madrid {
+  background-image: url(/images/madrid.jpg);
+  background-repeat:no-repeat;
+  background-size:100%;
+  display: block;
+  float:left;
+}
+
+.preview.rome {
+  background-image: url(/images/rome.jpg);
+  background-repeat:no-repeat;
+  background-size:100%;
+  display: block;
+  float:left;
+}
+
+.preview {
+font-size: 1.2em;
+text-align:left;
+font-style:normal;
+font-weight: bold;
+font-family: sans-serif;
+width:300px;
+height: 150px;
+Margin:5px;
+}
+
+
+.container
+
+{
+  width: 100px;
+  height: 100px;
+  display: block;
+
+}
+
+.container >h1 {
+  font-size: 1.5em;
+  text-align: center;
+  font-style: normal;
+  font-family:sans-serif;
+  font-variant-caps: all-small-caps;
+  width: 300px;
+
+}
+
+@media screen and (min-width: 575px){
+   div {
+    margin: 1%;
+
+  }
+}
+
+@media screen and (min-width: 1199px){
+   div {
+    margin: 1%;
+
+  }
 }
