--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 .preview.baku {
   background-image: url(../images/baku.jpg);
   background-repeat: no-repeat;
-  background-size: 90%;
+  background-size: cover;
 }
 
 h1
@@ -18,24 +18,25 @@ h1
   display:block;
   margin-left:20px;
   padding-top:20px;
+  padding-left: 20px;
 }
 
 .preview.london {
   background-image: url(../images/london.png);
   background-repeat:no-repeat;
-  background-size:90%;
+  background-size:cover;
 }
 
 .preview.madrid {
   background-image: url(../images/madrid.jpg);
   background-repeat:no-repeat;
-  background-size:90%;
+  background-size:cover;
 }
 
 .preview.rome {
   background-image: url(../images/rome.jpg);
   background-repeat:no-repeat;
-  background-size:90%;
+  background-size:cover;
 }
 
 .preview {
@@ -44,13 +45,9 @@ text-align:left;
 font-style:normal;
 font-weight: bold;
 font-family: sans-serif;
-width:410px;
-height: 150px;
-margin-left: 30px;
-margin-right: 8px;
-margin-right: 8px;
-margin-bottom: 10px;
-margin-top:10px;
+width:100%;
+height: 300px;
+margin-bottom: 20px;
 display: inline-block;
 }
 
@@ -60,7 +57,9 @@ display: inline-block;
   text-align: center;
   font-family:sans-serif;
   font-variant-caps: all-small-caps;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 0px;
 }
 
 @media screen and (min-width: 575px){
@@ -68,12 +67,17 @@ display: inline-block;
     width: 45.8%;
     margin: 1%;
   }
+  .container {
+    margin-left: 3em;
+    margin-right: auto;
+  }
 }
 
 @media screen and (min-width: 1199px){
    .preview  {
      margin-left:1%;
      width: 22.8%;
+     height: 250px;
      }
   }
 
